crud creditLine funcional
